Fix a React warning in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -130,7 +130,7 @@ var App = React.createClass({
           </div>
           <div className="form-field">
             <label>Security message:</label><br/>
-            <textarea name="message"> Hello </textarea>
+            <textarea name="message" defaultValue=" Hello "/>
           </div>
           <div className="form-field">
             <label>A cat picture:</label><br/>
